# seditor

./: .gitignore  DESIGN_DISCUSSION.md  DOCS.md  LIBRARIES_INFO.md  LICENSE  PLAN.md  PROMPT_TOOLKIT_FEATURES.md  QUICKSTART_v2.md  README.md  REMAINING_PLAN.md  SEMANTIC_SEARCH.md  TODO_SUMMARY.md  package.json  pyproject.toml  test_option_keys.py  test_semantic_search.py  vite.config.js
docs/: CHANGELOG.md  QUICKSTART.md  README.md
seditor/: __init__.py  main.py
seditor/components/: __init__.py  command_palette.py  editor.py  editor_ptk.py  file_tree.py
seditor/core/: app.py  app_ptk.py  file_tree.py
seditor/handlers/: __init__.py
seditor/search/: __init__.py  semantic_indexer.py
seditor/terminal/: __init__.py  layout.py  manager.py
seditor/utils/: file_utils.py
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  commands.rs  error.rs  main.rs  settings.rs  state.rs
src-tauri/src/api/: chat.rs  lsp.rs  mod.rs  settings.rs  terminal.rs
src-tauri/src/core/: chat.rs  filesystem.rs  mod.rs  settings.rs  state.rs  terminal.rs
src-tauri/src/lsp/: client.rs  manager.rs  mod.rs  servers.rs
tests/: __init__.py  test_command_palette.py  test_mouse.py  test_resize.py  test_terminal.py
