[tool.poetry]
name = "seditor"
version = "0.1.0"
description = "Simple terminal editor with file tree and editor panes"
authors = ["User <user@example.com>"]
readme = "README.md"
packages = [{include = "seditor"}]

[tool.poetry.scripts]
seditor = "seditor.main:main"

[tool.poetry.dependencies]
python = "^3.10"
blessed = "^1.20.0"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
