[tool.poetry]
name = "seditor"
version = "2.0.2"
description = "Simple and functional terminal editor with split-pane interface and syntax highlighting"
authors = ["User <user@example.com>"]
readme = "README.md"
packages = [{include = "seditor"}]

[tool.poetry.scripts]
seditor = "seditor.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pyperclip = "^1.8.2"
prompt-toolkit = "^3.0.0"
pygments = "^2.17.0"
chromadb = {version = "^0.4.0", optional = true}
sentence-transformers = {version = "^2.2.0", optional = true}
torch = {version = "^2.0.0", optional = true}
numpy = {version = "^1.26.0,<2.0.0", optional = true}

[tool.poetry.extras]
ai = ["chromadb", "sentence-transformers", "torch", "numpy"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
