[package]
name = "tauri-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [ "http-all", "fs-read-file", "shell-execute",
  "devtools"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
anyhow = "1.0"
regex = "1.10"
parking_lot = "0.12"
directories = "5.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

