[package]
name = "seditor"
version = "0.1.0"
edition = "2021"
authors = ["sEditor Team"]
description = "Modern terminal-based editor with AI integration"
repository = "https://github.com/seditor/seditor"

# Core dependencies
[dependencies]
tauri = { version = "1.5", features = ["http-all", "fs-read-file", "shell-execute", "devtools"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Utilities
once_cell = "1.19"
regex = "1.10"
parking_lot = "0.12"
directories = "5.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

